--- a/src/App/Screen.form
+++ b/src/App/Screen.form
@@ -118,7 +118,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="3feee" class="javax.swing.JButton" binding="NewButton">
+              <component id="3feee" class="javax.swing.JButton" binding="ButtonNew">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -126,7 +126,7 @@
                   <text value="Save New"/>
                 </properties>
               </component>
-              <component id="c8127" class="javax.swing.JButton" binding="ExistingButton">
+              <component id="c8127" class="javax.swing.JButton" binding="ButtonSave">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
