--- a/src/App/Screen.form
+++ b/src/App/Screen.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="c7c80" binding="panelTop" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c7c80" binding="panelTop" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -16,13 +16,24 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="54d02" class="javax.swing.JLabel">
+          <component id="54d02" class="javax.swing.JLabel" binding="Title">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-15459532"/>
               <font size="24"/>
               <text value="Contact Project"/>
+            </properties>
+          </component>
+          <component id="e2a80" class="javax.swing.JLabel" binding="title2">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-16050124"/>
+              <text value="Donné personnel"/>
+              <verticalAlignment value="0"/>
             </properties>
           </component>
         </children>
